# Ros2_Ly

./: .gitignore  AGENTS.md  CONFIG_SETUP_GUIDE.md  FINAL_CHECK_REPORT.md  README.md  TEST_GUIDE.md  restart_all.sh  上車前最終檢查清單.md  完整使用流程.md  消息通訊鏈路文檔.md  系統行為說明.md  系統行為說明_更新.md
config/: base_config.yaml  common.yaml
docs/: README.md  auto_aim_common.md  behavior_tree.md  gimbal_driver.md  predictor.md  sentry_posture_system.md  shooting_table_calib.md  tracker_solver.md
docs/architecture/: control_angles_data_flow.md  fire_control_flow.md  message_and_link_flow.md  system_behavior.md  system_behavior_v1.md
docs/guides/: auto_aim_tuning_handover.md  auto_aim_yamlization_checklist.md  config_setup_guide.md  external_topic_boundary.md  full_usage_flow.md  module_standalone_test.md  preflight_checklist.md  self_check_dual_suite.md  test_guide.md
docs/modules/: behavior_tree.md  buff_hitter.md  detector.md  gimbal_driver.md  outpost_hitter.md  predictor.md  record.md  shooting_table_calib_usage_legacy.md  shooting_table_calib_usage_ros2.md
docs/plans/: mapper_node_fire_control_improvement.md
docs/record/: README.md  behavior_tree_bt_pinned_and_old_fire_logic_2026-03-18.md  typeid6_chassis_and_typeid7_extend_alignment_2026-04-23.md
docs/reports/: final_check_report.md  full_link_audit_2026-03-05.md  repository_completeness_audit_2026-03-05.md  self_check_status_2026-03-05.md
docs/sentry/: current_upper_lower_data_mapping.md  decision_visualization_2026-04-27.md  gimbal_gimbal_vel_uplink_integration_2026-04-06.md  lower_downlink_message_contract.md  navi_debug_runbook.md  optional_items_demo_runbook.md  posture_firmware_integration_checklist.md  posture_lower_firmware_integration.md  reserve_32_1_uplink_docking_spec_2026-04-06.md  sentry_decision_autoaim_manual.md  sentry_decision_zone_blocks.md  sentry_posture_interface_change_2026-03-03.md  sentry_posture_system.md  showcase_demo_runbook.md
plans/: mapper_node_fire_control_improvement.md
scripts/: FUNCTION_GUIDE.md  README.md  debug.sh  self_check_robot.sh  self_check_sentry.sh  start_sentry_all.sh  start_sentry_all_competition.sh  start_shooting_table_calib.sh
scripts/config/: auto_aim_config_competition.yaml
scripts/debug/: outpost_target_test.sh
scripts/feature_test/: run_feature_test.sh
scripts/feature_test/standalone/modes/: armor_mode.sh  chassis_spin_mode.sh
scripts/launch/: armor_only_test.sh  outpost_test.sh  start_autoaim_debug.sh  start_sentry_all.sh  start_sentry_chase_only.sh  start_shooting_table_calib.sh
scripts/python/: start.py
scripts/selfcheck/: robot.sh  sentry.sh
src/auto_aim_common/: CMakeLists.txt  package.xml
src/auto_aim_common/include/Log/: Log.hpp
src/auto_aim_common/include/Logger/: Logger.hpp
src/auto_aim_common/msg/: AngleImage.msg  Armors.msg  Trackers.msg
src/behavior_tree/: CMakeLists.txt  main.cpp  package.xml
src/behavior_tree/Scripts/: config.json  main.xml
src/behavior_tree/include/: Application.hpp  BTNodes.hpp  Node.hpp  PostureManager.hpp  PostureTypes.hpp  Robot.hpp  Topic.hpp
src/behavior_tree/launch/: armor_patrol_test.launch.py  behavior_tree.launch.py  chase_only.launch.py  competition_autoaim.launch.py  navi_debug.launch.py  sentry_all.launch.py  showcase.launch.py
src/behavior_tree/module/: Area.hpp  BasicTypes.hpp  Counter.hpp  ROSTools.hpp  Random.hpp  SineWave.hpp  json.hpp
src/behavior_tree/src/: Application.cpp  BehaviorTree.cpp  Configuration.cpp  DecisionTrace.cpp  GameLoop.cpp  PostureLogic.cpp  PostureManager.cpp  PublishMessage.cpp  RuntimeGuard.cpp  SubscribeMessage.cpp
src/buff_hitter/: CMakeLists.txt  main.cpp  package.xml
src/buff_hitter/config/: config.json
src/buff_hitter/module/: BuffCalculator.hpp  BuffDetector.hpp  RosTools.hpp
src/buff_hitter/src/: BuffDetector.cpp
src/decision_viz/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/decision_viz/config/: default.yaml
src/decision_viz/decision_viz/: __init__.py  config.py  control_bus.py  main.py  mock_inputs.py  model.py  ros_topic_monitor.py  start.py  trace.py  validation.py  viewer.py  web_stream.py
src/decision_viz/sample/: sample_trace.jsonl
src/detector/: CMakeLists.txt  detector_node.cpp  package.xml  simple_bridge_node.cpp
src/detector/config/: auto_aim_config.yaml  detector_config.yaml
src/detector/launch/: auto_aim.launch.py  buff.launch.py  old_auto_aim.launch  outpost.launch.py  outpost_test.launch.py
src/detector/module/: Camera.hpp
src/detector/script/: buff_test_bridge.py  fire_flip_test.py  mapper_node.py
src/detector/src/: armor_detector.cpp  armor_refinder.cpp  number_classifier.cpp  yolo_detector.cpp
src/gimbal_driver/: CMakeLists.txt  main.cpp  package.xml
src/gimbal_driver/module/: BasicTypes.hpp  IODevice.hpp  ROSTools.hpp
src/gimbal_driver/msg/: Chassis.msg  GimbalVel.msg  GimbalYaw.msg  Vel.msg
src/navi_tf_bridge/: CMakeLists.txt
src/navi_tf_bridge/config/: tf_calib_points_example.yaml  tf_config.yaml
src/navi_tf_bridge/script/: solve_static_tf_from_points.py
src/navi_tf_bridge/src/: target_rel_to_goal_pos_node.cpp
src/outpost_hitter/: CMakeLists.txt  outpost_hitter_node.cpp  package.xml
src/outpost_hitter/src/: PoseSolver.cpp
src/predictor/: CMakeLists.txt  package.xml  predictor_node.cpp
src/predictor/config/: predictor_config.yaml
src/predictor/src/: controller.cpp  motion_model.cpp  predictor.cpp  solver.cpp
src/shooting_table_calib/: CMakeLists.txt  package.xml  shooting_table_node.cpp  shooting_table_nodev1.cpp
src/shooting_table_calib/launch/: shooting_table_calib.launch  shooting_table_calib.launch.py
src/tracker_solver/: CMakeLists.txt  car_tracker_solver_node.cpp  package.xml
src/tracker_solver/include/car_tracker/: tracker.hpp  tracker_matcher.hpp  tracker_matcher_with_whole_car.hpp
src/tracker_solver/include/solver/: solver.hpp
src/tracker_solver/src/: solver.cpp  tracker.cpp
tools/Behaviortree/: README.md  bt_xml_viewer.html
tools/PnPcamera/: capture_chessboard.py  solve_intrinsics.py
tools/maps/: mappointer.py
tools/maps/web/: map_marker.html
(+23 files in other folders)
