<?xml version="1.0"?>
<package format="3">
  <name>decision_viz</name>
  <version>0.1.0</version>
  <description>Offline pygame decision trace visualizer for the sentry behavior tree.</description>
  <maintainer email="unwanhin@example.com">unwanhin</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
